@@ -2,8 +2,8 @@
 
 perldir = @PERLPATH@/EBox/OpenVPN/Types
 
-nobase_perl_DATA = PortAndProtocol.pm Certificate.pm TlsRemote.pm \
-				  WriteOnceText.pm
+nobase_perl_DATA = PortAndProtocol.pm Certificate.pm TlsRemote.pm 
+
 
 DISTCLEANFILES = 
 
